# curso-ml

./: .pre-commit-config.yaml  pyproject.toml  setup_git_config.sh
curso_machine_learning/casos/: 123.py  1malnutricion.py  descargar_malnutricion.py  test.py
curso_machine_learning/casos/123/: README.md
tests/: regresion_lineal.ipynb
